--- a/wp-content/themes/themannekentrip/assets/scss/page/_index.scss
+++ b/wp-content/themes/themannekentrip/assets/scss/page/_index.scss
@@ -44,7 +44,11 @@ body.page-template-tpl-index #main {
         }
 
         &.facebook {
-            width: auto;
+            width: 100%;
+
+            @include mq(medium){
+                width: auto;
+            }
         }
 
         h3 {
